manifests/03-nextcloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud-system
  labels:
    app.kubernetes.io/name: nextcloud
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:34.0.2-apache
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /status.php
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /status.php
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 15
        resources:
          requests:
            cpu: "1"
            memory: "1Gi"
          limits:
            cpu: "2"
            memory: "2Gi"
        volumeMounts:
        - name: nextcloud-data
          mountPath: /var/www/html
      volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-app-pvc
