manifests/19-nextcloud-blue-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service-blue
  namespace: nextcloud-system
  labels:
    app.kubernetes.io/name: nextcloud
    deployment.color: blue
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 80
    protocol: TCP
  selector:
    app.kubernetes.io/name: nextcloud
    deployment.color: blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-blue
  namespace: nextcloud-system
  labels:
    app.kubernetes.io/name: nextcloud
    deployment.color: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
      deployment.color: blue
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
        deployment.color: blue
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:apache
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/bash
              - -c
              - cat /usr/local/share/ca-certificates/minio-ca.crt >> /etc/ssl/certs/ca-certificates.crt 2>/dev/null && update-ca-certificates || true
        volumeMounts:
        - name: nextcloud-data
          mountPath: /var/www/html
        - name: custom-php-ini
          mountPath: /usr/local/etc/php/conf.d/ca.ini
          subPath: ca.ini
          readOnly: true
        - name: custom-php-ini
          mountPath: /var/www/html/config/redis.config.php
          subPath: custom-redis.config.php
          readOnly: true
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 2000m
            memory: 2Gi
      volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-app-pvc
      - name: custom-php-ini
        configMap:
          name: nextcloud-php-custom-ini
