manifests/20-notify-push-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-notify-push
  namespace: nextcloud-system
  labels:
    app: nextcloud-notify-push
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 7867
    targetPort: 7867
    protocol: TCP
  selector:
    app: nextcloud-notify-push
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-notify-push
  namespace: nextcloud-system
  labels:
    app: nextcloud-notify-push
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-notify-push
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: nextcloud-notify-push
    spec:
      containers:
      - name: notify-push
        image: nextcloud:apache
        imagePullPolicy: IfNotPresent
        command:
        - /var/www/html/custom_apps/notify_push/bin/x86_64/notify_push
        ports:
        - containerPort: 7867
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        volumeMounts:
        - name: nextcloud-data
          mountPath: /var/www/html
      volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-app-pvc
