manifests/01-traefik-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-route
  namespace: nextcloud-system
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host("nextcloud.sengporkeat.com") || Host("10.1.16.200") || Host("10.1.16.11")
      || Host("10.1.16.12") || Host("10.1.16.13")
    middlewares:
    - name: nextcloud-security-headers
      namespace: nextcloud-system
    services:
    - name: nextcloud-service
      port: 8080
      sticky:
        cookie:
          httpOnly: true
          name: nextcloud_session_sticky
          secure: true
